# Electronics_store

./: Contacts_fixture.json  Factory_fixture.json  Individual_entrepreneur_fixture.json  Products_fixture.json  README.md  Retail_chain_fixture.json  Users_fixture.json  pyproject.toml
config/: settings.py  urls.py
supplier/: admin.py  models.py  paginators.py  serializers.py  urls.py  validators.py  views.py
supplier/migrations/: 0001_initial.py  0002_factory_level_individual_entrepreneur_level_and_more.py  0003_alter_individual_entrepreneur_provider_factory_and_more.py  0004_factory_provider_factory_alter_factory_contacts_and_more.py  0005_individual_entrepreneur_provider_individual_entrepreneur_and_more.py  0006_rename_provider_individual_entrepreneur_individual_entrepreneur_provider_individual_entrepreneur.py  0007_remove_individual_entrepreneur_provider_individual_entrepreneur.py  0008_individual_entrepreneur_provider_individual_entrepreneur.py  0009_remove_factory_provider_factory_and_more.py  0010_alter_factory_level_and_more.py  0011_alter_factory_level_and_more.py
supplier/tests/: test_.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_role.py  0003_alter_user_role.py  0004_remove_user_role.py  0005_alter_user_first_name_alter_user_last_name.py
