[tool.poetry]
name = "electronics-store"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.5.0"
python-dotenv = "^1.1.0"
psycopg2-binary = "^2.9.10"
django-filter = "^25.1"
django-cors-headers = "^4.7.0"
drf-yasg = "^1.21.10"
pillow = "^11.1.0"
black = "^25.1.0"
flake8 = "^7.1.2"
django-celery-beat = "^2.7.0"
pytest = "^8.3.5"
pytest-django = "^4.11.0"
coverage = "^7.8.0"
isort = "^6.0.1"
mypy = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[pytest]
DJANGO_SETTINGS = "config.settings"
